projects/compiler/test/typechecker/map/error_type_mismatch_bindingdecl.3.out
Error at %FILE_NAME%:1:36
Type mismatch
  |  val m: Map<Int, String> = { (123): None, (456): Some("hello") }
                                        ^
Expected: String
but instead found: <unknown>?
